microsphere-java 提取批 5：reflect 包 21 文件（JavaType 泛型模型 + TypeUtils 实参解析 + 定义类家族 + MethodUtils Predicate 体系 + AccessibleObjectUtils --add-opens 提示），5 KP；convert↔reflect 依赖链实证